--- a/includes/definitions/linux.yaml
+++ b/includes/definitions/linux.yaml
@@ -15,10 +15,11 @@ poller_modules:
     ospf: 0
     stp: 0
 discovery_modules:
+    applications: 1
     bgp-peers: 0
+    libvirt-vminfo: 1
     stp: 0
     vmware-vminfo: 1
-    libvirt-vminfo: 1
 processor_stacked: 1
 register_mibs:
     rxCounter: GANDI-MIB
