--- a/includes/definitions/zywall.yaml
+++ b/includes/definitions/zywall.yaml
@@ -4,8 +4,12 @@ group: zyxel
 type: firewall
 over:
     - { graph: device_bits, text: Traffic }
+    - { graph: device_processor, text: 'CPU Usage' }
+    - { graph: device_mempool, text: 'Memory Usage' }
 icon: zyxel
 discovery:
+    - sysDescr:
+        - USG60
     -
       sysObjectId:
           - .1.3.6.1.4.1.890.1.6
