added tests + changed disco

--- a/includes/definitions/zywall.yaml
+++ b/includes/definitions/zywall.yaml
@@ -8,12 +8,11 @@ over:
     - { graph: device_mempool, text: 'Memory Usage' }
 icon: zyxel
 discovery:
-    - sysDescr:
-        - USG60
     -
       sysObjectId:
           - .1.3.6.1.4.1.890.1.6
           - .1.3.6.1.4.1.890.1.15
       sysDescr_regex:
           - '/^ZyWALL/'
+          - '/^USG60/'
     - sysDescr_regex: '/^ZyWALL 2X/'
