--- a/includes/definitions/netgear.yaml
+++ b/includes/definitions/netgear.yaml
@@ -7,8 +7,5 @@ bad_if:
 over:
     - { graph: device_bits, text: 'Device Traffic' }
 discovery:
-    - sysObjectId:
-        - .1.3.6.1.4.1.4526.100.2.
-        - .1.3.6.1.4.1.4526.100.4.
-        - .1.3.6.1.4.1.4526.100.10.
-        - .1.3.6.1.4.1.4526.1.10
+    - sysObjectId: .1.3.6.1.4.1.4526
+    - sysDescr: ProSafe
