--- a/includes/definitions/enterasys.yaml
+++ b/includes/definitions/enterasys.yaml
@@ -1,6 +1,7 @@
 os: enterasys
 text: Enterasys
 type: network
+mib_dir: enterasys
 over:
     - { graph: device_bits, text: 'Device Traffic' }
 icon: enterasys
