added mod_deflate check

--- a/html/.htaccess
+++ b/html/.htaccess
@@ -5,7 +5,9 @@ Options FollowSymlinks Multiviews
 
 AddType image/svg+xml .svg
 <IfModule mod_filter.c>
-AddOutputFilterByType DEFLATE image/svg+xml
+  <IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE image/svg+xml
+  </IfModule>
 </IfModule>
 
 RewriteEngine on
