--- a/includes/definitions/cyberpower.yaml
+++ b/includes/definitions/cyberpower.yaml
@@ -3,3 +3,5 @@ text: 'Cyberpower'
 type: power
 over:
     - { graph: device_current, text: Current }
+discovery:
+    - { sysObjectId: .1.3.6.1.4.1.3808.1.1.3, sysDescr: 'Power Manager' }
