--- a/includes/definitions/digipower.yaml
+++ b/includes/definitions/digipower.yaml
@@ -3,3 +3,5 @@ text: 'Digipower'
 type: power
 over:
     - { graph: device_current, text: Current }
+discovery:
+    - { sysObjectId: .1.3.6.1.4.1.17420, sysDescr: 'Switched PDU' }
