--- a/includes/definitions/cyberpower.yaml
+++ b/includes/definitions/cyberpower.yaml
@@ -7,3 +7,7 @@ over:
     - { graph: device_voltage, text: Voltage }
 discovery:
     - sysObjectId: .1.3.6.1.4.1.3808.1.1.3
+poller_modules:
+    ports: 0
+discovery_modules:
+    ports: 0
