--- a/includes/definitions/extremeware.yaml
+++ b/includes/definitions/extremeware.yaml
@@ -8,5 +8,6 @@ over:
     - { graph: device_processor, text: 'CPU Usage' }
     - { graph: device_mempool, text: 'Memory Usage' }
 discovery:
-    - sysObjectId:
-        - .1.3.6.1.4.1.1916.2
+    -
+      sysObjectId: .1.3.6.1.4.1.1916.2
+      sysDescr_regex: '/^XOS/'
