--- a/includes/definitions/apc.yaml
+++ b/includes/definitions/apc.yaml
@@ -10,3 +10,5 @@ discovery:
         - APC MasterSwitch PDU
         - APC Metered Rack PDU
         - APC Embedded PowerNet
+    - sysObjectId:
+        - .1.3.6.1.4.1.5528.100.20.10
