--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,7 @@
         "pear/console_table": "^1.3",
         "dapphp/radius": "^2.0",
         "php-amqplib/php-amqplib": "^2.0",
-        "symfony/yaml": "^2.8",
-        "rmccue/requests": "^1.7"
+        "symfony/yaml": "^2.8"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "2.6.*",
