--- a/includes/definitions/dnos-v6.yaml
+++ b/includes/definitions/dnos-v6.yaml
@@ -1,7 +1,8 @@
-os: dnos
+os: dnosv6
 text: 'Dell Networking OS'
 type: network
 icon: dell
+group: dnos
 mib_dir:
     - dell
     - f10
@@ -11,7 +12,6 @@ over:
     - { graph: device_mempool, text: 'Memory Usage' }
 discovery:
     - sysObjectId:
-        - .1.3.6.1.4.1.6027.1.
         - .1.3.6.1.4.1.674.10895.3042
         - .1.3.6.1.4.1.674.10895.3044
         - .1.3.6.1.4.1.674.10895.3045
