Unit Testing and more precise OS definition

--- a/includes/definitions/avocent.yaml
+++ b/includes/definitions/avocent.yaml
@@ -6,4 +6,4 @@ discovery:
     - sysDescr_regex:
         - '/^Avocent/'
         - '/^AlterPath/'
-        - '/^Cyclades ACS/'
+        - '/^Cyclades ACS 6000/'
