--- a/includes/definitions/avocent.yaml
+++ b/includes/definitions/avocent.yaml
@@ -6,4 +6,5 @@ discovery:
     - sysDescr_regex:
         - '/^Avocent/'
         - '/^AlterPath/'
-        - '/^Cyclades ACS 6000/'
+    - sysObjectId:
+        - .1.3.6.1.4.1.10418.16
