--- a/includes/definitions/mgeups.yaml
+++ b/includes/definitions/mgeups.yaml
@@ -7,6 +7,9 @@ mib_dir:
     - mge
 over:
     - { graph: device_current, text: Current }
+    - { graph: device_voltage, text: Voltage }
+    - { graph: device_load, text: Load }
+    - { graph: device_power, text: Power }
 discovery:
     - sysObjectId:
         - .1.3.6.1.4.1.705.1
