--- a/includes/definitions/ardmore-encoder.yaml
+++ b/includes/definitions/ardmore-encoder.yaml
@@ -6,6 +6,4 @@ over:
     - { graph: device_bits, text: Traffic }
 discovery:
     - sysDescr_regex:
-        - '/^Ardmore-Encoder_VX/'
-    - sysObjectId:
-        - .1.3.6.1.4.1.8072.3.2.10
+        - '/Ardmore-Encoder_VX/'
