--- a/includes/definitions/ict-psu.yaml
+++ b/includes/definitions/ict-psu.yaml
@@ -5,6 +5,9 @@ icon: ict
 nobulk: 1
 mib_dir:
     - ict
+over:
+    - { graph: device_voltage, text: Voltage }
+    - { graph: device_current, text: Current }
 discovery:
     - sysObjectId:
         - .1.3.6.1.4.1.39145.11
