--- a/includes/definitions/eaton-mgeups.yaml
+++ b/includes/definitions/eaton-mgeups.yaml
@@ -1,5 +1,6 @@
-os: mgepdu
-text: 'Eaton MGE PDU'
+os: eaton-mgeups
+text: 'Eaton MGE UPS'
+group: ups
 type: power
 icon: eaton
 mib_dir:
@@ -8,4 +9,4 @@ over:
     - { graph: device_current, text: Current }
 discovery:
     - sysObjectId:
-        - .1.3.6.1.4.1.705.2
+        - .1.3.6.1.4.1.705.1
