--- a/includes/definitions/onefs.yaml
+++ b/includes/definitions/onefs.yaml
@@ -12,5 +12,5 @@ over:
 discovery:
     - sysObjectId:
         - .1.3.6.1.4.1.12124.1
-    - sysDescr_regex:
-        - '/Isilon OneFS v8/'
+    - sysDescr:
+        - 'Isilon OneFS'
