Update overview graphs

--- a/includes/definitions/apc-mgeups.yaml
+++ b/includes/definitions/apc-mgeups.yaml
@@ -8,6 +8,8 @@ mib_dir:
     - mge
 over:
     - { graph: device_current, text: Current }
+    - { graph: device_voltage, text: Voltage }
+    - { graph: device_load, text: Load }
 discovery:
     -
         sysObjectId:
