--- a/includes/definitions/avaya-vsp.yaml
+++ b/includes/definitions/avaya-vsp.yaml
@@ -3,7 +3,7 @@ text: 'Avaya VOSS'
 type: network
 icon: avaya
 mib_dir:
-    - nortel/baynetworks
+    - nortel
 over:
     - { graph: device_bits, text: 'Device Traffic' }
     - { graph: device_processor, text: 'CPU Usage' }
