--- a/includes/definitions/asyncos.yaml
+++ b/includes/definitions/asyncos.yaml
@@ -1,6 +1,6 @@
 os: asyncos
 text: 'Cisco AsyncOS'
-type: appliance
+type: proxy
 icon: cisco
 over:
     - { graph: device_bits, text: Traffic }
@@ -8,14 +8,18 @@ over:
     - { graph: device_mempool, text: 'Memory Usage' }
 discovery:
     - sysObjectId:
-        - .1.3.6.1.4.1.15497.1.2
-    - sysDesc:
-        - 'AsyncOS'
+        - .1.3.6.1.4.1.15497.1
 mib_dir:
     - cisco
 poller_modules:
     ipmi: 0
     bgp-peers: 0
     ospf: 0
+    stp: 0
+    ntp: 0
+discovery_modules:
+    ports-stack: 0
+    cisco-vrf-lite: 0
+    bgp-peers: 0
     stp: 0
     ntp: 0
