--- a/includes/definitions/ge-ups.yaml
+++ b/includes/definitions/ge-ups.yaml
@@ -1,4 +1,4 @@
-os: ge-digitalenergy
+os: ge-ups
 text: 'GE Digital Energy UPS'
 group: ups
 type: power
@@ -12,5 +12,3 @@ discovery:
     -
         sysObjectId:
             - .1.3.6.1.4.1.818.1.100.1.1
-        sysDescr_regex:
-            - '/^GE Web/'
