--- a/includes/definitions/terra.yaml
+++ b/includes/definitions/terra.yaml
@@ -1,5 +1,5 @@
-os: sti410c
-text: 'Terra sti410C'
+os: terra
+text: 'Terra'
 type: appliance
 group: terra
 icon: terra
@@ -7,4 +7,4 @@ over:
     - { graph: device_processor, text: 'CPU Usage' }
 discovery:
     - sysObjectId:
-        - .1.3.6.1.4.1.30631.1.9
+        - .1.3.6.1.4.1.30631.1.
