--- a/includes/definitions/lcos.yaml
+++ b/includes/definitions/lcos.yaml
@@ -6,7 +6,9 @@ over:
     - { graph: device_bits, text: 'Device Traffic' }
     - { graph: device_processor, text: 'CPU Usage' }
     - { graph: device_mempool, text: 'Memory Usage' }
+register_mibs:
+    LCOS-MIB: LCOS-MIB
 discovery:
     - sysObjectId:
-        - .1.3.6.1.4.1.2356.11.8.103
         - .1.3.6.1.4.1.2356.600.6.
+        - .1.3.6.1.4.1.2356.11.8.
