--- a/includes/definitions/mrv-od.yaml
+++ b/includes/definitions/mrv-od.yaml
@@ -1,10 +1,11 @@
-os: mrv-optidriver
-group: mrv
+os: mrv-od
 text: 'MRV OptiDriver'
 type: network
 icon: mrv
+mib_dir:
+    - mrv
 discovery:
     - sysObjectId:
-       - .1.3.6.1.4.1.629.200.1.1.1.
+       - .1.3.6.1.4.1.629.200.
     - sysDescr:
         - 'OD-NM OD'
