--- a/includes/definitions/lcos.yaml
+++ b/includes/definitions/lcos.yaml
@@ -6,8 +6,8 @@ over:
     - { graph: device_bits, text: 'Device Traffic' }
     - { graph: device_processor, text: 'CPU Usage' }
     - { graph: device_mempool, text: 'Memory Usage' }
-register_mibs:
-    LCOS-MIB: LCOS-MIB
+mib_dir:
+    - lancom
 discovery:
     - sysObjectId:
         - .1.3.6.1.4.1.2356.600.6.
