--- a/includes/definitions/fibeair.yaml
+++ b/includes/definitions/fibeair.yaml
@@ -11,8 +11,9 @@ poller_modules:
     wifi: 1
     mib: 1
 discovery:
-    - sysObjectId:
-        - .1.3.6.1.4.1.4458.20.3.1.1
-        - .1.3.6.1.4.1.4458.20.3.1.2
-        - .1.3.6.1.4.1.4458.20.5.1.2
-        - .1.3.6.1.4.1.4458.20.6.1.2
+#    - sysObjectId:
+#        - .1.3.6.1.4.1.4458.20.3.1.1
+#        - .1.3.6.1.4.1.4458.20.5.1.2
+#        - .1.3.6.1.4.1.4458.20.6.1.2
+    - sysDescr_regex:
+        - '/^FibeAir 4800/'
