--- a/includes/definitions/adva_fsp150.yaml
+++ b/includes/definitions/adva_fsp150.yaml
@@ -1,12 +1,13 @@
-os: adva
-text: ADVA
+os: adva_fsp150
+text: ADVA_FSP150CC
 type: network
 icon: adva
+group: ADVA
 over:
    - { graph: device_bits, text: Traffic }
    - { graph: device_temperature, text: Temperature }
 discovery:
    - sysObjectId: 
-     - .1.3.6.1.4.1.2544.1.
+     - .1.3.6.1.4.1.2544.1.12.1.1.
 mib_dir:
    - adva
