--- a/includes/definitions/wipipe.yaml
+++ b/includes/definitions/wipipe.yaml
@@ -2,6 +2,8 @@ os: wipipe
 text: 'CradlePoint WiPipe'
 type: network
 icon: cradlepoint
+mib_dir:
+    - cradlepoint
 discovery:
     - sysObjectId:
        - .1.3.6.1.4.1.20992.
