--- a/includes/definitions/windows.yaml
+++ b/includes/definitions/windows.yaml
@@ -3,6 +3,8 @@ type: server
 text: 'Microsoft Windows'
 ifname: 1
 processor_stacked: 1
+mib_dir:
+    - dell
 bad_hrSystemUptime: true
 discovery:
     - sysObjectId: .1.3.6.1.4.1.311.1.1.3
