--- a/includes/definitions/tplink.yaml
+++ b/includes/definitions/tplink.yaml
@@ -1,5 +1,5 @@
 os: tplink
-text: 'TP-Link Switch'
+text: 'TP-Link'
 type: network
 icon: tplink
 over:
@@ -7,3 +7,7 @@ over:
 discovery:
     - sysObjectId:
         - .1.3.6.1.4.1.11863.
+    - sysDescr:
+        - SafeStream Wireless N Gigabit Broadband VPN Router
+mib_dir:
+    - tplink
