--- a/includes/definitions/ethernetprobe2.yaml
+++ b/includes/definitions/ethernetprobe2.yaml
@@ -2,6 +2,8 @@ os: ethernetprobe2
 text: Atal Ethernetprobe2
 type: environment
 icon: atal
+mib_dir:
+    - atal
 over:
     - { graph: device_bits, text: 'Device Traffic' }
 discovery:
