--- a/includes/definitions/quanta.yaml
+++ b/includes/definitions/quanta.yaml
@@ -11,7 +11,8 @@ mib_dir:
 discovery:
     - sysObjectId:
           - .1.3.6.1.4.1.7244
-    - sysObjectId:
+    - 
+      sysObjectId:
           - .1.3.6.1.4.1.4413
       sysDescr_regex:
           - '/VxWorks/'
