--- a/includes/definitions/benuos.yaml
+++ b/includes/definitions/benuos.yaml
@@ -5,8 +5,8 @@ icon: benuos
 mib_dir:
     - benuos
 discovery:
-    - sysDescr:
-        - BenuOS
+    - sysObjectId:
+        - .1.3.6.1.4.1.39406.1
 over:
     - { graph: device_bits, text: 'Device Traffic' }
     - { graph: device_processor, text: 'Processor Usage' }
