--- a/includes/definitions/axos.yaml
+++ b/includes/definitions/axos.yaml
@@ -1,4 +1,4 @@
-os: calix
+os: axos
 text: Calix
 type: network
 ifname: 1
@@ -8,6 +8,4 @@ over:
     - { graph: device_bits, text: 'Device Traffic' }
 discovery:
     - sysObjectId:
-        - .1.3.6.1.4.1.6321.1.2.2.5.3
-        - .1.3.6.1.4.1.6066.1.44
-        - .1.3.6.1.4.1.6321.1.2.3
+        - .1.3.6.1.4.1.6321.1.2.4
