--- a/includes/definitions/discovery/apc.yaml
+++ b/includes/definitions/discovery/apc.yaml
@@ -119,17 +119,17 @@ modules:
                 descr: 'Inlet #3'
                 divisor: 10
             -
-               oid: airIRRP100UnitStatusCompressorDriveHeatSinkTempMetric
-               num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.1.2.2.41.
-               index: 'airIRRP100UnitStatusCompressorDriveHeatSinkTempMetric.{{ $index }}'
-               descr: 'Compressor Drive Heatsink'
-               divisor: 10
+                oid: airIRRP100UnitStatusCompressorDriveHeatSinkTempMetric
+                num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.1.2.2.41.
+                index: 'airIRRP100UnitStatusCompressorDriveHeatSinkTempMetric.{{ $index }}'
+                descr: 'Compressor Drive Heatsink'
+                divisor: 10
             -
-               oid: airIRRP100UnitStatusCompressorDriveControlCardTempMetric
-               num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.1.2.2.43.
-               index: 'airIRRP100UnitStatusCompressorDriveControlCardTempMetric.{{ $index }}'
-               descr: 'Compressor Drive Control Card'
-               divisor: 10
+                oid: airIRRP100UnitStatusCompressorDriveControlCardTempMetric
+                num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.1.2.2.43.
+                index: 'airIRRP100UnitStatusCompressorDriveControlCardTempMetric.{{ $index }}'
+                descr: 'Compressor Drive Control Card'
+                divisor: 10
             -
                 oid: airIRRP500UnitStatusSupplyAirTempMetric
                 num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.2.2.2.5.
@@ -160,7 +160,7 @@ modules:
                 index: 'airIRRP500UnitStatusRackInletTemperature3Metric.{{ $index }}'
                 descr: 'Inlet #3'
                 divisor: 10
-        humidty:
+        humidity:
             -
                 oid: airIRRP100UnitStatusSupplyHumidity
                 num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.1.2.2.8.
@@ -200,14 +200,33 @@ modules:
                 divisor: 10
         voltage:
             -
-                oid: airIRRP100UnitStatusCompressorDriveVoltage.0
+                oid: airIRRP100UnitStatusCompressorDriveVoltage
                 num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.1.2.2.37.
                 index: 'airIRRP100UnitStatusCompressorDriveVoltage.{{ $index }}'
                 descr: Compressor Drive
                 divisor: 10
             -
-                oid: airIRRP100UnitStatusCompressorDriveDCLinkVoltage.0
+                oid: airIRRP100UnitStatusCompressorDriveDCLinkVoltage
                 num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.1.2.2.39.
                 index: 'airIRRP100UnitStatusCompressorDriveDCLinkVoltage.{{ $index }}'
                 descr: Compressor Drive DC Link
+                divisor: 10
+        current:
+            -
+                oid: airIRRP100UnitStatusHumidifierCurrent
+                num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.1.2.2.33.
+                index: 'airIRRP100UnitStatusHumidifierCurrent.{{ $index }}'
+                descr: Humidifier
+                divisor: 10
+            -
+                oid: airIRRP100UnitStatusCompressorDriveCurrent
+                num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.1.2.2.38.
+                index: 'airIRRP100UnitStatusCompressorDriveCurrent.{{ $index }}'
+                descr: Compressor Drive
+                divisor: 10
+            -
+                oid: airIRRP500UnitStatusHumidifierCurrent
+                num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.2.2.2.33.
+                index: 'airIRRP100UnitStatusHumidifierCurrent.{{ $index }}'
+                descr: Humidifier
                 divisor: 10
