--- a/includes/definitions/discovery/rittal-lcp.yaml
+++ b/includes/definitions/discovery/rittal-lcp.yaml
@@ -5,9 +5,10 @@ modules:
             -
                 oid: cmcIIIUnitStatus
                 value: cmcIIIUnitStatus
+                state_name: cmcIIIUnitStatus
                 num_oid: .1.3.6.1.4.1.2606.7.2.1.
                 index: 'cmcIIIUnitStatus.{{ $index }}'
-                descr: 'Unit Status'
+                descr: Unit Status
                 states:
                     - { descr: OK, graph: 1, value: 1, generic: 0 }
                     - { descr: Failed, graph: 1, value: 2, generic: 2 }
