--- a/includes/definitions/discovery/apc.yaml
+++ b/includes/definitions/discovery/apc.yaml
@@ -34,6 +34,7 @@ modules:
                 oid: airIRRP100UnitStatusOperateMode
                 num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.1.2.2.1.
                 descr: Unit Status
+                index: 'airIRRP100UnitStatusOperateMode.{{ $index }}'
                 states:
                     - { descr: standby, graph: 1, value: 1, generic: 1 }
                     - { descr: on, graph: 1, value: 2, generic: 0 }
@@ -46,6 +47,7 @@ modules:
                 oid: airIRRP100UnitStatusInputState
                 num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.1.2.2.21.
                 descr: Input State
+                index: 'airIRRP100UnitStatusInputState.{{ $index }}'
                 states:
                     - { descr: open, graph: 1, value: 1, generic: 0 }
                     - { descr: closed, graph: 1, value: 2, generic: 2 }
@@ -53,6 +55,7 @@ modules:
                 oid: airIRRP100UnitStatusOutputState
                 num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.1.2.2.22.
                 descr: Output State
+                index: 'airIRRP100UnitStatusOutputState.{{ $index }}'
                 states:
                     - { descr: open, graph: 1, value: 1, generic: 0 }
                     - { descr: closed, graph: 1, value: 2, generic: 2 }
@@ -60,6 +63,7 @@ modules:
                 oid: airIRRP500UnitStatusOperateMode
                 num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.2.2.2.1.
                 descr: Unit Status
+                index: 'airIRRP500UnitStatusOperateMode.{{ $index }}'
                 states:
                     - { descr: standby, graph: 1, value: 1, generic: 1 }
                     - { descr: on, graph: 1, value: 2, generic: 0 }
@@ -71,6 +75,7 @@ modules:
                 oid: airIRRP500UnitStatusInputState
                 num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.2.2.2.21.
                 descr: Input State
+                index: 'airIRRP500UnitStatusInputState.{{ $index }}'
                 states:
                     - { descr: open, graph: 1, value: 1, generic: 0 }
                     - { descr: closed, graph: 1, value: 2, generic: 2 }
@@ -78,6 +83,7 @@ modules:
                 oid: airIRRP500UnitStatusOutputState
                 num_oid: .1.3.6.1.4.1.318.1.1.13.3.3.2.2.2.22.
                 descr: Output State
+                index: 'airIRRP500UnitStatusOutputState.{{ $index }}'
                 states:
                     - { descr: open, graph: 1, value: 1, generic: 0 }
                     - { descr: closed, graph: 1, value: 2, generic: 2 }
