--- a/includes/definitions/rittal-lcp.yaml
+++ b/includes/definitions/rittal-lcp.yaml
@@ -4,14 +4,16 @@ type: environment
 icon: rittal
 mib_dir:
     - rittal
-over:
-    - { graph: device_processor, text: 'Processor Usage' }
-    - { graph: device_ucd_memory, text: 'Memory Usage' }
-    - { graph: device_storage, text: 'Storage Usage' }
 discovery:
     -
         sysObjectId:
             - .1.3.6.1.4.1.2606.7
     - sysDescr:
         - 'Rittal LCP'
-        
+discovery_modules:
+    storage: 0
+    mempools: 0
+    processors: 0
+over:
+    - { graph: device_temperature, text: 'Temperatures' }
+    - { graph: device_power, text: 'Cooling capacity' }
