--- a/includes/definitions/discovery/apc.yaml
+++ b/includes/definitions/discovery/apc.yaml
@@ -4,11 +4,13 @@ modules:
         state:
             data:
                 -
-                    oid: upsBasicOutputStatus
-                    num_oid: .1.3.6.1.4.1.318.1.1.1.4.1.1.
-                    descr: Output Status
-                    index: '{{ $index }}'
-                    states:
+                     oid: upsBasicOutputStatus
+                     value: upsBasicOutputStatus
+                     num_oid: .1.3.6.1.4.1.318.1.1.1.4.1.1.
+                     descr: Output Status
+                     index: '{{ $index }}'
+                     state_name: upsBasicOutputStatus
+                     states:
                         - { descr: unknown, graph: 0, value: 1, generic: 3 }
                         - { descr: onLine, graph: 0, value: 2, generic: 0 }
                         - { descr: onBattery, graph: 0, value: 3, generic: 1 }
