--- a/includes/definitions/discovery/apc.yaml
+++ b/includes/definitions/discovery/apc.yaml
@@ -84,6 +84,38 @@ modules:
                     states:
                         - { descr: open, graph: 1, value: 1, generic: 0 }
                         - { descr: closed, graph: 1, value: 2, generic: 2 }
+                -
+                    oid: rPDU2PhaseStatusTable
+                    value: rPDU2PhaseStatusLoadState
+                    num_oid: .1.3.6.1.4.1.318.1.1.26.6.3.1.4.
+                    index: 'rPDU2PhaseStatusLoadState.{{ $index }}'
+                    descr: 'Load state #{{ $index }}'
+                    states:
+                        - { descr: lowLoad, graph: 1, value: 1, generic: 1 }
+                        - { descr: normal, graph: 1, value: 2, generic: 0 }
+                        - { descr: nearOverload, graph: 1, value: 3, generic: 1 }
+                        - { descr: overload, graph: 1, value: 4, generic: 2 }
+                -
+                    oid: rPDU2DeviceStatusTable
+                    value: rPDU2DeviceStatusLoadState
+                    num_oid: .1.3.6.1.4.1.318.1.1.26.4.3.1.4.
+                    index: 'rPDU2DeviceStatusLoadState.{{ $index }}'
+                    descr: rPDU2DeviceStatusName
+                    states:
+                        - { descr: lowLoad, graph: 1, value: 1, generic: 1 }
+                        - { descr: normal, graph: 1, value: 2, generic: 0 }
+                        - { descr: nearOverload, graph: 1, value: 3, generic: 1 }
+                        - { descr: overload, graph: 1, value: 4, generic: 2 }
+                        - { descr: notsupported, graph: 1, value: 5, generic: 3 }
+                -
+                    oid: rPDU2DeviceStatusTable
+                    value: rPDU2DeviceStatusPowerSupplyAlarm
+                    num_oid: .1.3.6.1.4.1.318.1.1.26.4.3.1.12.
+                    index: 'rPDU2DeviceStatusPowerSupplyAlarm.{{ $index }}'
+                    descr: rPDU2DeviceStatusName
+                    states:
+                        - { descr: normal, graph: 1, value: 1, generic: 0 }
+                        - { descr: alarm, graph: 1, value: 2, generic: 2 }
         temperature:
             data:
                 -
@@ -218,6 +250,13 @@ modules:
                     index: 'airIRRP100UnitStatusCompressorDriveDCLinkVoltage.{{ $index }}'
                     descr: Compressor Drive DC Link
                     divisor: 10
+                -
+                    oid: rPDU2PhaseStatusTable
+                    value: rPDU2PhaseStatusVoltage
+                    num_oid: .1.3.6.1.4.1.318.1.1.26.6.3.1.6.
+                    index: 'rPDU2PhaseStatusVoltage.{{ $index }}'
+                    descr: 'Voltage #{{ $index }}'
+                    skip_value_lt: 0
         current:
             data:
                 -
@@ -238,6 +277,13 @@ modules:
                     index: 'airIRRP100UnitStatusHumidifierCurrent.{{ $index }}'
                     descr: Humidifier
                     divisor: 10
+                -
+                    oid: rPDU2PhaseStatusTable
+                    value: rPDU2PhaseStatusCurrent
+                    num_oid: .1.3.6.1.4.1.318.1.1.26.6.3.1.5.
+                    divisor: 10
+                    index: 'rPDU2PhaseStatusCurrent.{{ $index }}'
+                    descr: 'Current #{{ $index }}'
         fanspeed:
             data:
                 -
@@ -304,3 +350,17 @@ modules:
                     index: 'airIRRP500UnitStatusCoolOutput.{{ $index }}'
                     descr: 'Cooling Output'
                     multiplier: 100
+                -
+                    oid: rPDU2PhaseStatusTable
+                    value: rPDU2PhaseStatusPower
+                    num_oid: .1.3.6.1.4.1.318.1.1.26.6.3.1.7.
+                    multiplier: 1000
+                    index: 'rPDU2PhaseStatusPower.{{ $index }}'
+                    descr: 'Power #{{ $index }}'
+                -
+                    oid: rPDU2DeviceStatusTable
+                    value: rPDU2DeviceStatusPower
+                    num_oid: .1.3.6.1.4.1.318.1.1.26.4.3.1.5.
+                    multiplier: 100
+                    index: 'rPDU2DeviceStatusPower.{{ $index }}'
+                    descr: rPDU2DeviceStatusName
