--- a/includes/definitions/ros.yaml
+++ b/includes/definitions/ros.yaml
@@ -1,5 +1,5 @@
-os: siemens-rs
-text: 'Siemens Ruggedcom Switches'
+os: ros
+text: 'Siemens Ruggedcom Switches (ROS)'
 type: network
 empty_ifdescr: 1
 icon: siemens
